--- a/changelog.html
+++ b/changelog.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 
-<!-- $Id: changelog.html,v 1.20 2013/01/12 22:42:54 jact Exp $ -->
+<!-- $Id: changelog.html,v 1.21 2013/01/16 19:04:56 jact Exp $ -->
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" dir="ltr">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
@@ -107,9 +107,11 @@
         <li class="fix">Mejoras en las breadcrumbs de las páginas</li>
 
         <li class="change">El segundo apellido no es obligatorio de rellenar en los formularios</li>
+
+        <li class="change">Se eliminan los enlaces a la ayuda contextual (porque no está hecha)</li>
       </ol>
 
-      <h2 id="c-06"><a href="#top" title="To top of the page">Changes since 0.6</a></h2>
+      <h2 id="c-06"><a href="#top" title="To top of the page">Changes since 0.6</a> (2003-12-21)</h2>
 
       <ol>
         <li class="add">Session has an own name</li>
@@ -215,7 +217,7 @@
         <li class="change">Field collegiate_number has been replaced with id_member in patient_tbl and problem_tbl tables. Field id_member has been added in deleted_patient_tbl, deleted_problem_tbl tables too. After upgrade OpenClinic from 0.6 version is recommended check all patients and problems information (doctor you are assigned to, doctor who treated you)</li>
       </ol>
 
-      <h2 id="c-05"><a href="#top" title="To top of the page">Changes since 0.5</a></h2>
+      <h2 id="c-05"><a href="#top" title="To top of the page">Changes since 0.5</a> (2003-06-30)</h2>
 
       <ol>
         <li class="add">Added new themes to the project: LibXML, SerialZ, Closer, GG Interactive</li>
@@ -303,7 +305,7 @@
         <li class="change">Changes in input_lib.php functions parameters</li>
       </ol>
 
-      <h2 id="c-04"><a href="#top" title="To top of the page">Changes since 0.4</a></h2>
+      <h2 id="c-04"><a href="#top" title="To top of the page">Changes since 0.4</a> (2003-05-17)</h2>
 
       <ol>
         <li class="add">Added install/wizard.php file to the project</li>
@@ -341,7 +343,7 @@
         <li class="add">Added nl2br() function to medical/*_view.php files</li>
       </ol>
 
-      <h2 id="c-03"><a href="#top" title="To top of the page">Changes since 0.3</a></h2>
+      <h2 id="c-03"><a href="#top" title="To top of the page">Changes since 0.3</a> (2003-03-02)</h2>
 
       <ol>
         <li class="add">Added bulgarian language (pazoff)</li>
@@ -407,7 +409,7 @@
         <li class="add">Added coding_guidelines.html file to the project</li>
       </ol>
 
-      <h2 id="c-02"><a href="#top" title="To top of the page">Changes since 0.2</a></h2>
+      <h2 id="c-02"><a href="#top" title="To top of the page">Changes since 0.2</a> (2003-02-08)</h2>
 
       <ol>
         <li class="change">Visual improvements (CSS)</li>
@@ -437,7 +439,7 @@
         <li class="add">Added getLastId() method to the Test_Query class</li>
       </ol>
 
-      <h2 id="c-01"><a href="#top" title="To top of the page">Changes since 0.1</a></h2>
+      <h2 id="c-01"><a href="#top" title="To top of the page">Changes since 0.1</a> (2003-01-25)</h2>
 
       <ol>
         <li class="fix">Fixed medical/problem_edit_form.php errors</li>
