--- a/demo_version.html
+++ b/demo_version.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 
-<!-- $Id: demo_version.html,v 1.14 2013/01/12 22:39:19 jact Exp $ -->
+<!-- $Id: demo_version.html,v 1.15 2013/01/20 12:18:34 jact Exp $ -->
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" dir="ltr">
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 
 <title>Demo Version Features</title>
 
@@ -11,9 +11,9 @@
 
 <meta name="MSSmartTagsPreventParsing" content="TRUE" />
 
-<meta name="author" content="Jose Antonio Chavarría" />
+<meta name="author" content="Jose Antonio ChavarrÃ­a" />
 
-<meta name="copyright" content="2002-2013 Jose Antonio Chavarría" />
+<meta name="copyright" content="2002-2013 Jose Antonio ChavarrÃ­a" />
 
 <meta name="keywords" content="OpenClinic, open source, gpl, healthcare, php, mysql, coresis" />
 
@@ -47,6 +47,20 @@
         <li><a href="./index.php">Start OpenClinic</a></li>
       </ul>
     </div><!-- #shortcuts -->
+
+    <div id="tabs">
+      <ul>
+        <li><a href="./index.html" class="first">Readme</a></li>
+
+        <li><a href="./install.html">Install Instructions</a></li>
+
+        <li><a href="./changelog.html">Changelog</a></li>
+
+        <li><a href="./coding_guidelines.html">Coding Guidelines</a></li>
+
+        <li><a href="./demo_version.html" class="selected">Demo Version Features</a></li>
+      </ul>
+    </div><!-- #tabs -->
   </div><!-- #header -->
 
   <hr />
@@ -116,7 +130,7 @@ define("OPEN_DEMO", <var>true</var>); // demo version
       <h2 id="bugs"><a href="#top" title="To top of the page">Bugs and Suggestions</a></h2>
 
       <p>
-        OpenClinic isn't perfect, but your suggestions, feedback and bug reports can help us to have a very well done medical records system! You can do this, mailing to <a href="mailto:CUT-THIS.openclinic&#64;gmail.com?subject=OpenClinic">Jose Antonio Chavarría</a> with <strong class="note">subject OpenClinic</strong>.
+        OpenClinic isn't perfect, but your suggestions, feedback and bug reports can help us to have a very well done medical records system! You can do this, mailing to <a href="mailto:CUT-THIS.openclinic&#64;gmail.com?subject=OpenClinic">Jose Antonio ChavarrÃ­a</a> with <strong class="note">subject OpenClinic</strong>.
       </p>
 
       <h1><a href="./index.php">Start using OpenClinic demo version</a></h1>
@@ -148,21 +162,11 @@ define("OPEN_DEMO", <var>true</var>); // demo version
   <hr />
 
   <div id="footer">
-    <ul id="doc_links">
-      <li><a href="./index.html">Readme</a></li>
-
-      <li><a href="./install.html">Install Instructions</a></li>
-
-      <li><a href="./changelog.html">Changelog</a></li>
-
-      <li><a href="./coding_guidelines.html">Coding Guidelines</a></li>
-    </ul>
-
     <div id="app_info">
-      <p>Powered by OpenClinic</p>
+      <p><a href="http://openclinic.sourceforge.net/">Powered by OpenClinic</a></p>
 
       <p>
-        Copyright &copy; 2002-2013 <a href="mailto:CUT-THIS.openclinic&#64;gmail.com?subject=OpenClinic" accesskey="9">Jose Antonio Chavarría</a>
+        Copyright &copy; 2002-2013 <a href="mailto:CUT-THIS.openclinic&#64;gmail.com?subject=OpenClinic" accesskey="9">Jose Antonio ChavarrÃ­a</a>
       </p>
 
       <p>
