--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 
-<!-- $Id: index.html,v 1.18 2013/01/13 14:13:14 jact Exp $ -->
+<!-- $Id: index.html,v 1.19 2013/01/20 12:18:34 jact Exp $ -->
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" dir="ltr">
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 
 <title>OpenClinic Readme</title>
 
@@ -11,9 +11,9 @@
 
 <meta name="MSSmartTagsPreventParsing" content="TRUE" />
 
-<meta name="author" content="Jose Antonio Chavarría" />
+<meta name="author" content="Jose Antonio ChavarrÃ­a" />
 
-<meta name="copyright" content="2002-2013 Jose Antonio Chavarría" />
+<meta name="copyright" content="2002-2013 Jose Antonio ChavarrÃ­a" />
 
 <meta name="keywords" content="OpenClinic, open source, gpl, healthcare, php, mysql, coresis" />
 
@@ -31,7 +31,6 @@
 
 <link rel="bookmark icon" type="image/png" href="./img/miniopc.png" />
 </head>
-<!-- @todo hacer como tabs los enlaces de pie de página para mantener la estructura coherente con la aplicación -->
 <body id="top">
 <div id="wrap">
   <div id="header">
@@ -46,6 +45,20 @@
         <li><a href="./index.php">Start OpenClinic</a></li>
       </ul>
     </div><!-- #shortcuts -->
+
+    <div id="tabs">
+      <ul>
+        <li><a href="./index.html" class="first selected">Readme</a></li>
+
+        <li><a href="./install.html">Install Instructions</a></li>
+
+        <li><a href="./changelog.html">Changelog</a></li>
+
+        <li><a href="./coding_guidelines.html">Coding Guidelines</a></li>
+
+        <li><a href="./demo_version.html">Demo Version Features</a></li>
+      </ul>
+    </div><!-- #tabs -->
   </div><!-- #header -->
 
   <hr />
@@ -167,7 +180,7 @@
       <h2 id="devel"><a href="#top" title="To top of the page">Developers Information</a></h2>
 
       <p>
-        [jact] - Jose Antonio Chavarría &lt;<a href="mailto:CUT-THIS.openclinic&#64;gmail.com">openclinic at gmail dot com</a>&gt;
+        [jact] - Jose Antonio ChavarrÃ­a &lt;<a href="mailto:CUT-THIS.openclinic&#64;gmail.com">openclinic at gmail dot com</a>&gt;
       </p>
 
       <ul>
@@ -175,7 +188,7 @@
 
         <li>person in charge of OpenClinic's maintenance service since autumn 2002</li>
 
-        <li>person in charge of the project <cite><a href="http://sourceforge.net/project/showfiles.php?group_id=70742">Control y Seguimiento de Historias Clínicas: Diseño e implementación</a></cite></li>
+        <li>person in charge of the project <cite><a href="http://sourceforge.net/project/showfiles.php?group_id=70742">Control y Seguimiento de Historias ClÃ­nicas: DiseÃ±o e implementaciÃ³n</a></cite></li>
       </ul>
 
       <p>
@@ -185,7 +198,7 @@
       <ul>
         <li>official beta-tester of OpenClinic project</li>
 
-        <li>person in charge of the project <cite><a href="http://sourceforge.net/project/showfiles.php?group_id=70742">Control y Seguimiento de Historias Clínicas: Diseño del sistema seguro</a></cite></li>
+        <li>person in charge of the project <cite><a href="http://sourceforge.net/project/showfiles.php?group_id=70742">Control y Seguimiento de Historias ClÃ­nicas: DiseÃ±o del sistema seguro</a></cite></li>
       </ul>
 
       <p>
@@ -257,21 +270,11 @@
   <hr />
 
   <div id="footer">
-    <ul id="doc_links">
-      <li><a href="./install.html">Install Instructions</a></li>
-
-      <li><a href="./changelog.html">Changelog</a></li>
-
-      <li><a href="./coding_guidelines.html">Coding Guidelines</a></li>
-
-      <li><a href="./demo_version.html">Demo Version Features</a></li>
-    </ul>
-
     <div id="app_info">
-      <p>Powered by OpenClinic</p>
+      <p><a href="http://openclinic.sourceforge.net/">Powered by OpenClinic</a></p>
 
       <p>
-        Copyright &copy; 2002-2013 <a href="mailto:CUT-THIS.openclinic&#64;gmail.com?subject=OpenClinic" accesskey="9">Jose Antonio Chavarría</a>
+        Copyright &copy; 2002-2013 <a href="mailto:CUT-THIS.openclinic&#64;gmail.com?subject=OpenClinic" accesskey="9">Jose Antonio ChavarrÃ­a</a>
       </p>
 
       <p>
