--- a/coding_guidelines.html
+++ b/coding_guidelines.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 
-<!-- $Id: coding_guidelines.html,v 1.16 2007/12/23 13:26:08 jact Exp $ -->
+<!-- $Id: coding_guidelines.html,v 1.17 2013/01/20 12:18:27 jact Exp $ -->
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" dir="ltr">
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 
 <title>OpenClinic Coding Guidelines</title>
 
@@ -13,7 +13,7 @@
 
 <meta name="author" content="Jose Antonio Chavarría" />
 
-<meta name="copyright" content="2002-2008 Jose Antonio Chavarría" />
+<meta name="copyright" content="2002-2013 Jose Antonio Chavarría" />
 
 <meta name="keywords" content="OpenClinic, open source, gpl, healthcare, php, mysql, coresis" />
 
@@ -45,6 +45,20 @@
         <li><a href="./index.php">Start OpenClinic</a></li>
       </ul>
     </div><!-- #shortcuts -->
+
+    <div id="tabs">
+      <ul>
+        <li><a href="./index.html" class="first">Readme</a></li>
+
+        <li><a href="./install.html">Install Instructions</a></li>
+
+        <li><a href="./changelog.html">Changelog</a></li>
+
+        <li><a href="./coding_guidelines.html" class="selected">Coding Guidelines</a></li>
+
+        <li><a href="./demo_version.html">Demo Version Features</a></li>
+      </ul>
+    </div><!-- #tabs -->
   </div><!-- #header -->
 
   <hr />
@@ -293,7 +307,7 @@ function fooFunction($arg1, $arg2 = '')
  * @package   Project name
  * @copyright year author
  * @license   http://www.gnu.org/copyleft/gpl.html GNU GPL
- * @version   CVS: $Id: coding_guidelines.html,v 1.16 2007/12/23 13:26:08 jact Exp $
+ * @version   CVS: $Id: coding_guidelines.html,v 1.17 2013/01/20 12:18:27 jact Exp $
  * @author    Name &lt;e-mail address&gt; (e-mail optional)
  */
 </code></pre>
@@ -619,21 +633,11 @@ collegiate_number, first_name, phone_contact, login
   <hr />
 
   <div id="footer">
-    <ul id="doc_links">
-      <li><a href="./index.html">Readme</a></li>
-
-      <li><a href="./install.html">Install Instructions</a></li>
-
-      <li><a href="./changelog.html">Changelog</a></li>
-
-      <li><a href="./demo_version.html">Demo Version Features</a></li>
-    </ul>
-
     <div id="app_info">
-      <p>Powered by OpenClinic</p>
+      <p><a href="http://openclinic.sourceforge.net/">Powered by OpenClinic</a></p>
 
       <p>
-        Copyright &copy; 2002-2008 <a href="mailto:CUT-THIS.openclinic&#64;gmail.com?subject=OpenClinic" accesskey="9">Jose Antonio Chavarría</a>
+        Copyright &copy; 2002-2013 <a href="mailto:CUT-THIS.openclinic&#64;gmail.com?subject=OpenClinic" accesskey="9">Jose Antonio Chavarría</a>
       </p>
 
       <p>
