--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 
-<!-- $Id: index.html,v 1.19 2013/01/20 12:18:34 jact Exp $ -->
+<!-- $Id: index.html,v 1.20 2013/02/02 19:07:02 jact Exp $ -->
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" dir="ltr">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -116,7 +116,7 @@
 
             <li>System Users</li>
 
-            <li>Dumps</li>
+            <li>Database Dumps</li>
 
             <li>Log Statistics</li>
           </ul>
@@ -127,11 +127,11 @@
 
       <ul>
         <li>
-          PHP5 &gt;= 5.3.1 (incompatible with PHP4) <strong class="note">compiled with MySQL support</strong> (tested with versions 5.2.17);
+          PHP5 &gt;= 5.3.1 (incompatible with PHP4) <strong class="note">compiled with MySQL support</strong> (tested with 5.3.1 and 5.3.6 versions);
         </li>
 
         <li>
-          MySQL (tested with versions 5.1);
+          MySQL (tested with 5.1 version);
         </li>
 
         <li>
@@ -156,7 +156,7 @@
 
         <li>License: <a href="./LICENSE">GNU General Public License (GPL)</a></li>
 
-        <li>Natural Language: English, Spanish, Bulgarian, Dutch, Traditional Chinese</li>
+        <li>Natural Language: English, Spanish, Dutch, Traditional Chinese</li>
 
         <li>Operating System: OS Independent</li>
 
@@ -214,7 +214,7 @@
       </p>
 
       <ul>
-        <li>dutch (nl_BE) translator: 0.6, 0.7 versions</li>
+        <li>dutch (nl_BE) translator: 0.6, 0.7, 0.8 versions</li>
       </ul>
 
       <p>
@@ -222,7 +222,7 @@
       </p>
 
       <ul>
-        <li>traditional chinese (zh_TW BIG5) translator: 0.7 version</li>
+        <li>traditional chinese (zh_TW BIG5) translator: 0.7, 0.8 versions</li>
       </ul>
 
       <h2 id="bye"><a href="#top" title="To top of the page">Farewell</a></h2>
