Se añade la URL del repositorio público del código fuente
Se añade la colaboración de Francesco Assisi (traducción al italiano)

--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
       <h2 id="down"><a href="#top" title="To top of the page">Download</a></h2>
 
       <p>
-        You can get the newest version at <a href="http://sourceforge.net/project/showfiles.php?group_id=70742">Sourceforge</a>.
+        You can get the newest version at <a href="http://sourceforge.net/project/showfiles.php?group_id=70742">Sourceforge</a> and <a href="https://github.com/jact/openclinic">view source code at GitHub</a>.
       </p>
 
       <h2 id="devel"><a href="#top" title="To top of the page">Developers Information</a></h2>
@@ -223,6 +223,14 @@
 
       <ul>
         <li>traditional chinese (zh_TW BIG5) translator: 0.7, 0.8 versions</li>
+      </ul>
+
+      <p>
+        Francesco Assisi &lt;<a href="mailto:CUT-THIS.fra.assisi&#64;gmail.com">fra dot assisi at gmail dot com</a>&gt;
+      </p>
+
+      <ul>
+        <li>italian (it_IT) translator: 0.8 versions</li>
       </ul>
 
       <h2 id="bye"><a href="#top" title="To top of the page">Farewell</a></h2>
