Se añaden los cambios realizados desde la última versión oficial

--- a/changelog.html
+++ b/changelog.html
@@ -83,9 +83,21 @@
         <!--li>Other</li-->
       </ul>
 
+      <h2 id="c-08"><a href="#top" title="To top of the page">Changes since 0.8</a> (2013-01-07)</h2>
+
+      <ol>
+        <li class="change"><a href="https://github.com/jact/openclinic">Source code repository at GitHub</a></li>
+
+        <li class="add">New italian translation thanks to Francesco Assisi</li>
+
+        <li class="fix">Fixed deletion of staff (second surname issue)</li>
+
+        <li class="fix">Fixed installation wizard problems in Chrome browsers</li>
+      </ol>
+
       <h2 id="c-07"><a href="#top" title="To top of the page">Changes since 0.7</a> (2004-12-26)</h2>
 
-     <ol>
+      <ol>
         <li class="change">Code compatibility with PHP5 (incompatible with PHP4) and MySQL 5.5</li>
 
         <li class="change">The storage engine used in MySQL is MyISAM although the default is InnoDB</li>
@@ -502,6 +514,8 @@
 
     <ul>
       <li><a href="#legend">Legend</a></li>
+
+      <li><a href="#c-08">Changes since 0.8</a></li>
 
       <li><a href="#c-07">Changes since 0.7</a></li>
 
